# ray-tracing

./: .gitignore  README.md  load-balancing.md
LR/: CMakeLists.txt
LR/Src/: Camera.cpp  Camera.hpp  Image.hpp  Intersection.cpp  Scene.cpp  Scene.hpp  Source.hpp  Sphere.cpp  Vecteur.cpp  Vecteur.hpp  lr.cpp
LR/Src/infra/: Intersection.hpp  Vecteur.cpp  Vecteur.hpp
LR/Src/objets/: Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
